--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -133,7 +133,7 @@
                         <label for="outputDir" class="form-label">
                             <i class="bi bi-folder me-1"></i>Ausgabeverzeichnis
                         </label>
-                        <input type="text" class="form-control" id="outputDir" value="./output">
+                        <input type="text" class="form-control" id="outputDir" value="./collected-content">
                     </div>
                     <button type="submit" class="btn btn-primary">
                         <i class="bi bi-play-fill me-1"></i>Job erstellen
